<resources>
    <string name="app_name">DicodingStory</string>
    <string name="content_description">Content Description</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login With Google</string>
    <string name="new_to_dicoding_story">New to Dicoding Story?</string>
    <string name="register">Register</string>
    <string name="by_signing_up_you_re_agree_to_our_terms_conditions_and_privacy_police"><![CDATA[By signing up, you\'re agree to our Terms & Conditions and Privacy Police]]></string>
    <string name="joined_us_before">Joined us before?</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure_you_want_to_log_out_the_app">Are you sure you want to log out the app?</string>
    <string name="no">No</string>
    <string name="map">Map</string>
    <string name="add_story">Add Story</string>
    <string name="detail_story">Detail Story</string>
    <string name="description">Description</string>
    <string name="add_image">Add Image</string>
    <string name="camerax">CameraX</string>
    <string name="post">Post</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>