<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.addstory.AddStoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:title="@string/add_story"
                app:titleTextAppearance="@style/TitleTextAppearance"
                app:navigationIcon="@drawable/ic_back"
                app:contentInsetStart="16dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:contentDescription="@string/content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="24dp">

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_rectangle_dash"
                android:contentDescription="@string/content_description"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/ivPhoto"
                app:layout_constraintEnd_toEndOf="@+id/ivPhoto"
                app:layout_constraintStart_toStartOf="@+id/ivPhoto"
                app:layout_constraintTop_toTopOf="@+id/ivPhoto">

                <ImageView
                    android:id="@id/ivAddImage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_add_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/add_image"
                    android:textAppearance="@style/TextView.CustomFontRegular"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/ivAddImage"
                    app:layout_constraintStart_toStartOf="@+id/ivAddImage"
                    app:layout_constraintTop_toBottomOf="@+id/ivAddImage" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/ivDescription"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_desc"
                app:layout_constraintBottom_toBottomOf="@+id/etDesc"
                app:layout_constraintStart_toStartOf="@+id/ivPhoto"
                app:layout_constraintTop_toTopOf="@+id/etDesc" />

            <EditText
                android:id="@+id/etDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="text|textMultiLine"
                android:minHeight="48dp"
                android:minLines="1"
                android:maxLines="4"
                android:textAppearance="@style/TextView.CustomFontRegular"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/ivPhoto"
                app:layout_constraintStart_toEndOf="@+id/ivDescription"
                app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
                tools:ignore="VisualLintTextFieldSize" />

            <com.example.dicodingstory.customview.MyButton
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:enabled="false"
                android:text="@string/post"
                app:layout_constraintEnd_toEndOf="@+id/etDesc"
                app:layout_constraintStart_toStartOf="@+id/ivDescription"
                app:layout_constraintTop_toBottomOf="@+id/etDesc"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>